Changes - Aligned items respect to each other, fixed the margins of the page, added extra touches to elements, improved on suggestions by evaluator

--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@ nav{
     font-size: 3vw;
     font-weight: 400;
     letter-spacing: -4%;
+    align-items: center;
 }
 
 .home {
